@@ -1,19 +1,23 @@
 package com.helei.tradedatacenter.resolvestream.decision;
 
 
-import com.helei.tradedatacenter.dto.OriginOrder;
-import com.helei.tradedatacenter.entity.TradeSignal;
-import com.helei.tradedatacenter.resolvestream.decision.config.PSTBollDecisionConfig_v1;
-import lombok.extern.slf4j.Slf4j;
+        import com.helei.tradedatacenter.dto.OriginOrder;
+        import com.helei.tradedatacenter.entity.TradeSignal;
+        import com.helei.tradedatacenter.resolvestream.decision.config.PSTBollDecisionConfig_v1;
+        import com.helei.tradedatacenter.resolvestream.indicator.Indicator;
+        import com.helei.tradedatacenter.resolvestream.indicator.config.IndicatorConfig;
+        import lombok.extern.slf4j.Slf4j;
 
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+        import java.math.BigDecimal;
+        import java.util.HashMap;
+        import java.util.List;
+        import java.util.Map;
+        import java.util.stream.Collectors;
 
 /**
  * 根据PST和Boll指标决策下单
  */
+@Deprecated
 @Slf4j
 public class PSTBollDecisionMaker extends AbstractDecisionMaker {
 
@@ -22,12 +26,10 @@ public class PSTBollDecisionMaker extends AbstractDecisionMaker {
     public PSTBollDecisionMaker(PSTBollDecisionConfig_v1 config) {
         super(config.getName());
         this.config = config;
-
     }
 
-
     @Override
-    public OriginOrder decisionAndBuilderOrder(List<TradeSignal> windowSignal) {
+    protected OriginOrder decisionAndBuilderOrder(String symbol, List<TradeSignal> windowSignal, HashMap<IndicatorConfig<? extends Indicator>, Indicator> indicatorMap) {
         String pstKey = config.getPstConfig().getIndicatorName();
         String bollKey = config.getBollConfig().getIndicatorName();
 
@@ -41,13 +43,12 @@ public class PSTBollDecisionMaker extends AbstractDecisionMaker {
             return null;
         }
 
-        TradeSignal newPstSignal = pstSignals.get(pstSignals.size() - 1);
-        TradeSignal newBollSignal = bollSignals.get(bollSignals.size() - 1);
+        TradeSignal newPstSignal = pstSignals.getLast();
+        TradeSignal newBollSignal = bollSignals.getLast();
 
         //TODO 仅仅测试用
         return buildMarketOrder(newBollSignal);
     }
-
 
     private static OriginOrder buildMarketOrder(TradeSignal newBollSignal) {
         return OriginOrder
